--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,45 +54,42 @@ services:
       - networklab
 
   spark-master:
-    image: bitnami/spark:latest
-    volumes:
-      - ./src/spark-worker.py:/opt/bitnami/spark/spark-worker.py
-    command: bin/spark-class org.apache.spark.deploy.master.Master
+    hostname: spark-master #added hostname attribute
+    container_name: spark-master #added container name attribute
+    image: docker.io/bitnami/spark:latest
+    environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
     ports:
-      - "9090:8080"
-      - "7079:7077"
+      - '8080:8080'
+      - '7077:7077'
+      - '4040:8080'
     networks:
       - networklab
-    environment:
-      SPARK_EXTRA_JARS: /opt/bitnami/spark/lib/spark/jars/spark-sql-kafka-0-10_2.12-3.5.2.jar
+    volumes:
+      - ./draft/mounted-spark-test.py:/draft/mounted-spark-test.py
+      - ./consumer2.py:/consumers/consumer2.py
 
-  spark-worker-1:
-    image: bitnami/spark:latest
-    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7079
-    depends_on:
-      - spark-master
+  spark-worker:
+    image: docker.io/bitnami/spark:latest
     environment:
-      SPARK_MODE: worker
-      SPARK_WORKER_CORES: 2
-      SPARK_WORKER_MEMORY: 1g
-      SPARK_MASTER_URL: spark://spark-master:7079
-      SPARK_EXTRA_JARS: /opt/bitnami/spark/lib/spark/jars/spark-sql-kafka-0-10_2.12-3.5.2.jar
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
     networks:
       - networklab
-
-  spark-worker-2:
-    image: bitnami/spark:latest
-    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     depends_on:
-      - spark-master
-    environment:
-      SPARK_MODE: worker
-      SPARK_WORKER_CORES: 2
-      SPARK_WORKER_MEMORY: 1g
-      SPARK_MASTER_URL: spark://spark-master:7077
-      SPARK_EXTRA_JARS: /opt/bitnami/spark/lib/spark/jars/spark-sql-kafka-0-10_2.12-3.5.2.jar
-    networks:
-      - networklab
-  
+      - spark-master  # Ensure worker waits for the master
 networks:
   networklab:
+    driver: bridge
